# claw-workbench

./: .gitignore  README.en.md  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
scripts/: check-tag-version.mjs  set-version.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/web_server/: auth.rs  dist_resolver.rs  mod.rs  router.rs  state.rs  ws_proxy.rs
src/components/: CommandPalette.tsx  ConfirmModal.tsx  CronPanel.tsx  ExecApprovalToast.tsx  HealthPanel.tsx  ImagePreview.tsx  LanguageSwitcher.tsx  LogsPanel.tsx  MemoryPanel.tsx  MultiModelConversationPane.tsx  ServerFormModal.tsx  ServerSelector.tsx  SubagentPanel.tsx  SystemNotification.tsx  ThemeSwitcher.tsx  ToolCallBlock.tsx  WebServerPanel.tsx
src/components/app/: AppMainHeader.tsx  AppPrimaryPanel.tsx  (+3 more)
src/data/: slashCommands.ts  themes.ts
src/hooks/: useCommandDetection.ts  useConfigRpc.test.ts  useConfigRpc.ts  useConfigStore.test.ts  useConfigStore.ts  useNotification.ts  useOpenClaw.test.ts  useOpenClaw.ts  useServerStore.ts  useThemeStore.ts  useWebServer.ts
src/i18n/: I18nProvider.tsx  context.ts  messages.test.ts  messages.ts  useI18n.ts  useLocalizedSubtree.ts
src/lib/: chatAttachmentCache.test.ts  chatAttachmentCache.ts  configSchema.ts  env.ts  imageUtils.ts  parsers.test.ts  parsers.ts  toolNames.ts
src/types/: config.ts  index.ts  server.ts
(+35 files in other folders)
